syntax = "proto3";
package MHUrho.Storage;

message StIntVector2 {
	int32 X = 1;
	int32 Y = 2;
}

message StIntVector3 {
	int32 X = 1;
	int32 Y = 2;
	int32 Z = 3;
}

message StVector2 {
	float X = 1;
	float Y = 2;
}

message StVector3 {
	float X = 1;
	float Y = 2;
	float Z = 3;
}